Add passcode unlock gate

--- a/.env.local
+++ b/.env.local
@@ -7,3 +7,6 @@ SUPABASE_SERVICE_ROLE_KEY=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhY
 
 # Due date (YYYY-MM-DD format) - defaults to 140 days from now if not set
 NEXT_PUBLIC_DUE_DATE=2026-07-30
+
+# Site passcode (NEW)
+SITE_PASSCODE=baby2026!
